# appimage-runtime

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml  pre-release.yml
cmake/: dependencies.cmake  get-libfuse.cmake  get-squashfuse.cmake  get-zlib.cmake  get-zstd.cmake  x86_64-toolchain.cmake
cmake/toolchains/: aarch64-linux-musl.cmake  arm-linux-musleabihf.cmake  i686-linux-musl.cmake  x86_64-linux-musl.cmake
patches/: fusermount2_fallback.patch
src/: CMakeLists.txt  data_sections.ld  main.c
toolchains/: musl-gcc.cmake
tooling/: build-docker-images.sh  build-in-docker.sh  build.sh  install-squashfuse.sh
